materialsetを検索するコマンド追加